--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "README.Rmd"
+title: "Lab 5"
 author: "Lukas Robinson"
 date: "2/23/2021"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
